# clash-rs

./: Cargo.toml  cleanup.sh
.cargo/: config.toml
clash-lib/: Cargo.toml
clash-lib/src/: lib.rs
clash-lib/src/app/inbound/: manager.rs
clash-lib/src/app/outbound/: manager.rs
clash-lib/src/app/remote_content_manager/providers/proxy_provider/: proxy_set_provider.rs
clash-lib/src/config/internal/: config.rs  listener.rs  proxy.rs
clash-lib/src/proxy/converters/: rigby.rs  vless.rs
clash-lib/src/proxy/rigby/: mod.rs  uri.rs
clash-lib/src/proxy/transport/: mod.rs  reality.rs
clash-lib/src/proxy/vless/: datagram.rs  mod.rs  stream.rs  stream.rs.backup  stream.rs.old
rigby-server/: Cargo.toml
rigby-server/src/: main.rs
