[workspace]
resolver = "3"

members = [
    "clash-bin",
    "clash-lib",
    "clash-doc",
    "clash-ffi",
    "clash-dns",
    "clash-netstack"
]


[workspace.package]
version = "0.9.5"
repository = "https://github.com/Watfaq/clash-rs.git"
edition = "2024"
authors = ["https://github.com/Watfaq/clash-rs/graphs/contributors"]
homepage = "https://github.com/watfaq/clash-rs"

[profile.release]
opt-level = "s"          # Optimize for size
codegen-units = 1        # Single codegen unit for better optimization
lto = "fat"              # Full LTO for maximum optimization
strip = true             # Strip symbols
debug = false            # No debug info in release
panic = "abort"          # Smaller panic handling
overflow-checks = false  # Disable overflow checks for smaller size

[workspace.lints.rust]
warnings = "allow"

[workspace.lints.clippy]
redundant_clone = "deny"
needless_collect = "deny"
