[package]
name = "rigby-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rigby-server"
path = "src/main.rs"

[dependencies]
clash-lib = { path = "../clash-lib" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
rand = "0.8"
x25519-dalek = "2.0"
quinn = "0.11"
rcgen = "0.11"
rustls = { version = "0.23", features = ["ring"] }